# testing-system

./: README.md  db.sqlite  design  testing-system.cabal
app/: DB.hs  Database.hs  Main.hs  Tester.hs
app/Api/: Course.hs  Static.hs  Test.hs  Testing.hs  User.hs
app/Api/Course/: CourseResp.hs  CoursesResp.hs  VCourse.hs  VCourses.hs
app/Api/Testing/: Core.hs  Response.hs  VInput.hs  VResponse.hs
app/Api/User/: RespReg.hs  VRespReg.hs  VUser.hs
app/Control/Monad/: Either.hs  EitherT.hs
app/DB/: Course.hs  Test.hs  User.hs
app/Database/: Course.hs  Monad.hs  User.hs
client/: package.json  webpack.config.js
client/public/: course.html  index.html
client/public/css/: style.css
client/src/: course.js  index.js
server/: testing-system.cabal
server/app/: Main.hs
server/app/Api/: Course.hs  Testing.hs  User.hs
server/app/Api/Course/: VCourse.hs  VCourses.hs
server/app/Api/Testing/: Core.hs  VInput.hs  VResponse.hs
server/app/Api/User/: RespLogin.hs  VRespLogin.hs
server/app/DB/: Problem.hs  User.hs
static/css/: style.css
static/html/: course.html  index.html
static/js/: course.js  index.js
