cabal-version:   3.0
name:            testing-system
version:         0.1.0.0
license:         NONE
author:          amhsm6@gmail.com
maintainer:      amhsm6
build-type:      Simple

common warnings
    ghc-options: -Wall

executable testing-system
    import:           warnings

    main-is:          Main.hs

    other-modules:    Tester
                      Database

    build-depends:    base ^>=4.18.2.1
                    , mtl
                    , stm
                    , text
                    , time
                    , utf8-string
                    , aeson
                    , filepath
                    , directory
                    , process
                    , dotenv
                    , servant-server
                    , servant-websockets
                    , websockets
                    , warp
                    , http-media
                    , HDBC
                    , HDBC-postgresql

    hs-source-dirs:   app

    default-language: Haskell2010
